--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: 'BlackWings Blog'
-description: "BlackWings Blog"
+title: "BlackWings's Blog"
+description: "BlackWings's Blog"
 baseurl: "/"
 url: "https://bwlog.github.io/blog"
 
